Fix header footer spacing

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -1,112 +1,117 @@
 .footer {
-  padding: 1rem var(--horizontal-padding);
   background-color: var(--black);
   color: var(--white);
-  display: flex;
-  gap: 2rem;
-  justify-content: space-between;
-  flex-direction: column;
 
-  .subscribe {
-    padding: 2rem 0;
+  .footerContent {
+    padding: 1rem var(--horizontal-padding);
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
     gap: 2rem;
-
-    .left {
-      flex: 1;
-
-      img {
-        border-radius: var(--rounded-edges);
-        width: auto;
-        height: 20rem;
-      }
-    }
-
-    .right {
-      flex: 1;
-      p {
-        font-size: 1.2rem;
-        padding: 1rem 0;
-      }
-
-      form {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-
-        .doubleFields {
-          display: grid;
-          grid-template-columns: 1fr 1fr;
-          align-items: flex-end;
-          grid-gap: 2rem;
-        }
-
-        button {
-          height: 2.6rem;
-          width: 50%;
-          border: 1px solid var(--red);
-          background-color: var(--red);
-          color: var(--white);
-          border-radius: var(--rounded-edges);
-          transition: var(--hover);
-          padding: 0.5rem;
-          cursor: pointer;
-          font-weight: 600;
-          font-size: 1.1rem;
-
-          &:hover {
-            background-color: var(--white);
-            color: var(--red);
-          }
-
-          &:disabled {
-            color: var(--white);
-            background-color: var(--inactive);
-            border-color: transparent;
-            cursor: not-allowed;
-          }
-        }
-      }
-    }
-  }
-
-  .copyright {
-    text-align: center;
-  }
-
-  @media screen and (max-width: 900px) {
-    padding: 0;
-    background-color: var(--charcoal);
+    justify-content: space-between;
+    flex-direction: column;
+    max-width: var(--max-width);
+    margin: auto;
 
     .subscribe {
-      padding: 0;
-      flex-direction: column-reverse;
+      padding: 2rem 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+      gap: 2rem;
 
       .left {
-        padding: 1rem var(--horizontal-padding);
-        background-color: var(--charcoal);
+        flex: 1;
 
         img {
-          margin: auto;
-          height: auto;
-          width: 100%;
+          border-radius: var(--rounded-edges);
+          width: auto;
+          height: 20rem;
         }
       }
 
       .right {
-        padding: 1rem var(--horizontal-padding) 2rem var(--horizontal-padding);
-        background-color: var(--black);
+        flex: 1;
+        p {
+          font-size: 1.2rem;
+          padding: 1rem 0;
+        }
 
-        form > button {
-          width: 100%;
+        form {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+
+          .doubleFields {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            align-items: flex-end;
+            grid-gap: 2rem;
+          }
+
+          button {
+            height: 2.6rem;
+            width: 50%;
+            border: 1px solid var(--red);
+            background-color: var(--red);
+            color: var(--white);
+            border-radius: var(--rounded-edges);
+            transition: var(--hover);
+            padding: 0.5rem;
+            cursor: pointer;
+            font-weight: 600;
+            font-size: 1.1rem;
+
+            &:hover {
+              background-color: var(--white);
+              color: var(--red);
+            }
+
+            &:disabled {
+              color: var(--white);
+              background-color: var(--inactive);
+              border-color: transparent;
+              cursor: not-allowed;
+            }
+          }
         }
       }
     }
 
     .copyright {
-      padding: 0 1rem 1rem 1rem;
+      text-align: center;
+    }
+
+    @media screen and (max-width: 900px) {
+      padding: 0;
+      background-color: var(--charcoal);
+
+      .subscribe {
+        padding: 0;
+        flex-direction: column-reverse;
+
+        .left {
+          padding: 1rem var(--horizontal-padding);
+          background-color: var(--charcoal);
+
+          img {
+            margin: auto;
+            height: auto;
+            width: 100%;
+          }
+        }
+
+        .right {
+          padding: 1rem var(--horizontal-padding) 2rem var(--horizontal-padding);
+          background-color: var(--black);
+
+          form > button {
+            width: 100%;
+          }
+        }
+      }
+
+      .copyright {
+        padding: 0 1rem 1rem 1rem;
+      }
     }
   }
 }
