--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -32,45 +32,47 @@
 }
 
 .header {
-  padding: 1rem var(--horizontal-padding);
-  position: fixed;
   background-color: var(--black);
-  display: flex;
-  gap: 1rem;
-  justify-content: space-between;
-  align-items: center;
-  max-width: var(--max-width);
+  height: var(--header-height);
+  position: fixed;
   left: 0;
   right: 0;
-  margin: auto;
   z-index: 10;
-  height: var(--header-height);
 
-  .logoContainer {
+  .headerContent {
+    padding: 1rem var(--horizontal-padding);
     display: flex;
+    gap: 1rem;
+    justify-content: space-between;
     align-items: center;
-    gap: 0.5rem;
-    font-size: 1.7rem;
-    word-wrap: break-word;
-    width: 18rem;
-    color: var(--white);
+    max-width: var(--max-width);
+    margin: auto;
 
-    .logo {
-      height: 4rem;
-    }
-
-    p {
-      font-family: 'Bebas Neue', sans-serif;
+    .logoContainer {
       display: flex;
-      flex-wrap: wrap;
+      align-items: center;
+      gap: 0.5rem;
+      font-size: 1.7rem;
+      word-wrap: break-word;
+      width: 18rem;
+      color: var(--white);
 
-      .after {
-        font-size: 1.4rem;
+      .logo {
+        height: 4rem;
+      }
+
+      p {
+        font-family: 'Bebas Neue', sans-serif;
+        display: flex;
+        flex-wrap: wrap;
+
+        .after {
+          font-size: 1.4rem;
+        }
       }
     }
   }
 }
-
 
 .mobileNavDrawer {
   background-color: var(--black);
